welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:53: error: ';' expected but 'else' found.
  }else{
   ^